--- a/styles/output.css
+++ b/styles/output.css
@@ -570,10 +570,6 @@ video {
   z-index: 50;
 }
 
-.ml-4 {
-  margin-left: 1rem;
-}
-
 .ml-16 {
   margin-left: 4rem;
 }
@@ -592,14 +588,6 @@ video {
 
 .h-auto {
   height: auto;
-}
-
-.h-\[50vh\] {
-  height: 50vh;
-}
-
-.h-60 {
-  height: 15rem;
 }
 
 .w-32 {
@@ -665,16 +653,8 @@ video {
   padding-bottom: 1rem;
 }
 
-.pl-4 {
-  padding-left: 1rem;
-}
-
 .text-center {
   text-align: center;
-}
-
-.font-button {
-  font-family: var(--font-button);
 }
 
 .font-fontText {
@@ -723,13 +703,19 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-300 {
-  transition-duration: 300ms;
+.hover\:bg-buttonFundo:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 140 155 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-blue-600:hover {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-buttonfont:hover {
+  --tw-text-opacity: 1;
+  color: rgb(32 30 67 / var(--tw-text-opacity, 1));
 }
 
 @media (min-width: 768px) {
