corrigindo html, deixando mais legivel

--- a/styles/output.css
+++ b/styles/output.css
@@ -626,10 +626,6 @@ video {
   height: 100%;
 }
 
-.min-h-screen {
-  min-height: 100vh;
-}
-
 .w-16 {
   width: 4rem;
 }
@@ -672,10 +668,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.gap-10 {
-  gap: 2.5rem;
 }
 
 .gap-4 {
@@ -731,11 +723,6 @@ video {
 .bg-cyan-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(103 232 249 / var(--tw-bg-opacity, 1));
-}
-
-.bg-fundo {
-  --tw-bg-opacity: 1;
-  background-color: rgb(32 30 67 / var(--tw-bg-opacity, 1));
 }
 
 .bg-green-500 {
@@ -868,6 +855,10 @@ video {
   color: rgb(209 213 219 / var(--tw-text-opacity, 1));
 }
 
+.opacity-5 {
+  opacity: 0.05;
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -917,10 +908,6 @@ video {
 
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .md\:flex-row {
-    flex-direction: row;
   }
 
   .md\:text-4xl {
